--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./styles.css">
+</head>
 <body>
-<h1>Hello World!</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>get your own cassettes donut</p>
+    <header>
+        <h1>mark</h1>
+        <h2>Links</h2>
+        <section class="links">
+            <div>
+                <a href="https://twitter.com/imjustlvlark">twitter.com/imjustlvlark</a>
+            </div>
+        </section>
+    </header>
+    <main>
+        <p>ppppp</p>
+    </main>
+    <footer class="bg-black white">
+        <p>Font used:</p>
+        <p>Monogram by <a href="https://datagoblin.itch.io/">Datagoblin</a></p>
+    </footer>
 </body>
 </html>
